Fixed Bug where PDR would create two new frames.